tests/syntax-error/syntax-error/syntax-error.factor
USING: kernel ;
IN: syntax-error

: greet ( -- str ) @#$% ;
